FIX: video height. Stop button not showing properly

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,7 +10,7 @@ video {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 768px;
+  height: 760px;
   width: 1066px;
   margin-left: 430px;
   margin-top: 20px;
